Position Priority, Rover AutoMove

--- a/MarsRovers/MarsRovers.csproj
+++ b/MarsRovers/MarsRovers.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="OpenTK">
+      <HintPath>..\packages\OpenTK.1.1.1589.5942\lib\NET40\OpenTK.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,17 +44,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Concrete\Plateau.cs" />
-    <Compile Include="Concrete\Rover.cs" />
-    <Compile Include="Direction.cs" />
-    <Compile Include="Interfaces\IPlateau.cs" />
-    <Compile Include="Interfaces\IRover.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoverPosition.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MarsRoversLib\MarsRoversLib.csproj">
+      <Project>{61cdbbc6-d353-4581-803a-4c24432b7845}</Project>
+      <Name>MarsRoversLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
